# cactus-flutter

./: .gitignore  CHANGELOG.md  README.md  build.sh  pubspec.yaml
.githooks/: pre-commit
android/: build.gradle
android/src/main/: AndroidManifest.xml  CMakeLists.txt
android/src/main/cpp/: CMakeLists.txt  cactus_jni.cpp
example/: .gitignore  README.md  pubspec.yaml
example/android/app/: build.gradle.kts  proguard-rules.pro
example/ios/: Podfile  configure_signing.rb  setup_signing.sh
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: basic_completion.dart  cactus_service.dart  chat.dart  device_info_helper.dart  embedding.dart  fetch_models.dart  function_calling.dart  hybrid_completion.dart  log_entry.dart  main.dart  memory.dart  rag.dart  rag_page.dart  sample_agent_tools.dart  streaming_completion.dart  stt.dart
example/lib/pages/: basic_completion.dart  benchmarks.dart  chat.dart  embedding.dart  hybrid_completion.dart  rag.dart  stt.dart  (+2 more)
ios/: cactus.podspec
ios/cactus_util.xcframework/: Info.plist
ios/whisper.xcframework/: Info.plist
lib/: agent.dart  bindings.dart  cactus.dart  chat.dart  context.dart  lm.dart  objectbox-model.json  objectbox.g.dart  telemetry.dart  tools.dart  types.dart  utils.dart  vlm.dart
lib/models/: document.dart  log_record.dart  models.dart  types.dart
lib/services/: lm.dart  rag.dart  stt.dart  supabase.dart  telemetry.dart  utility.dart  whisper.dart
lib/src/: version.dart
lib/utils/: device_info.dart  ffi_utils.dart
macos/cactus_util.xcframework/: Info.plist
(+72 files in other folders)
